--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/libroh3.jpg" width="400" height="500" alt="...">
+              <img src="img/libroh3.jpg" width="400" height="500" alt="Imagen de libro 1">
             </div>
             <div class="carousel-item">
-              <img src="img/nat4.jpg" width="400" height="500" alt="...">
+              <img src="img/nat4.jpg" width="400" height="500" alt="Imagen de libro 2">
             </div>
             <div class="carousel-item">
-              <img src="img/filo8.jpg" width="400" height="500" alt="...">
+              <img src="img/filo8.jpg" width="400" height="500" alt="Imagen de libro 3">
             </div>
             <div class="carousel-item">
-              <img src="img/libroh7.jpg" width="400" height="500" alt="...">
+              <img src="img/libroh7.jpg" width="400" height="500" alt="Imagen de libro 4">
             </div>
             <div class="carousel-item">
-              <img src="img/nat9.jpg" width="400" height="500" alt="...">
+              <img src="img/nat9.jpg" width="400" height="500" alt="Imagen de libro 5">
             </div>
             <div class="carousel-item">
-              <img src="img/nove3.jpg" width="400" height="500" alt="...">
+              <img src="img/nove3.jpg" width="400" height="500" alt="Imagen de libro 6">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -147,7 +147,21 @@
     <p>A cualquier lugar donde vayas un libro siempre sera una grata compañia</p>
         
     </div>
+
 </main>
+
+<div class="posicionRedes">
+
+                        
+  <div>
+      <img width="55" height="55" src="img/intagram.png"logo de instagram>
+  </div>
+
+  <div>
+      <a class="linkRed2" href="https://www.instagram.com/migueliusangelius/" target="_blank">Seguínos</a>
+  </div>
+
+  </div>
 
 <footer class="footerNosotros">
     <p>Alejandria en Red todos los derechos reservados</p>
